I made a change because Alan told me to.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
               <img src="images/vnc_access.png" class="card-img-top" alt="Image of VNC server access project.">
               <div class="card-body">
                 <h4>VNC Server Access</h4>
+                <p>Alan said to make a implied change.</p>
               </div>
             </div>
             <div class="card-back">
