--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 This was another project of my operating systems course. We installed a Linux operating system on the school
                 computer and set up a secure-shell access to this server.
                 Then we installed a VNC server software on this computer to allow remote access to this server with the ability
-                to view the desktop display of the server.
+                to view the desktop display of the server.Hello
               </p>
             </div>
           </div>
