changes to my web portfolio

--- a/index.html
+++ b/index.html
@@ -161,11 +161,9 @@
       </div>
     </div>
   </div>
-  <!--Resume download button-->
-  <a href="goen_resume.pdf" target="_blank" class="click-buttons" id="resume-button">Download resume</a>
   <!--Skills progress bar-->
   <div class="progress-bar-container scroll">
-    <h3 class="m-5">Languages</h3>
+    <h3 class="m-5">Language progress bars</h3>
     <!--Progress bar for Java-->
     <div class="progress-bar" id="java-progress-bar">
       <h4>Java</h4>
@@ -201,37 +199,13 @@
     </div>
   </div>
 </section>
+<!--Project Section-->
 <section id="Projects" class="scroll">
   <h1 class="text-center mb-5">Projects</h1>
   <div class="container">
     <div class="row" data-masonry='{"percentPosition": true }'>
       <!--project1-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
-        <div class="card">
-          <!--Card has front and back to have flip animation-->
-          <div class="card-front">
-            <img src="images/raspberry-pi-project%20copy.jpeg" class="card-img-top"
-                    alt="Image of Raspberry Pi project.">
-            <div class="card-body">
-              <h4>Counting Pi</h4>
-            </div>
-          </div>
-          <div class="card-back">
-            <h4>Counting Pi</h4>
-            <p>
-              This was one of my lab projects for my operating systems course. I set up a Raspbian operating system on
-              the
-              raspberry pi. Wrote a program that counts up when I pushed the button on the Pi, and different color LED
-              light
-              would turn on depending on if the current number is even, odd, or the power of two.
-            </p>
-            <a href="https://github.com/cgoen/raspberry-pi-lab" target="_blank"><p>Click here to view my code on
-              GitHub!</p></a>
-          </div>
-        </div>
-      </div>
-      <!--project2-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
+      <div class="col-12  card-container">
         <div class="card">
           <!--Card has front and back to have flip animation-->
           <div class="card-front">
@@ -255,99 +229,6 @@
           </div>
         </div>
       </div>
-      <!--project3-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
-        <div class="card">
-          <!--Card has front and back to have flip animation-->
-          <div class="card-front">
-            <img src="images/mid-term-project.png" class="card-img-top" alt="Image of mid term website project.">
-            <div class="card-body">
-              <h4>Green Tea Website</h4>
-            </div>
-          </div>
-          <div class="card-back">
-            <h4>Green Tea Website</h4>
-            <p>
-              This was a midterm project for my web development class, and it is the very first web-site I made!
-              This project involved choosing a content and building a website from scratch using HTML and CSS.
-              It was my first attempt at responsive design to different media screen sizes. Through this project, I
-              developed my
-              HTML, CSS and design skills.
-            </p>
-            <!--link to project-->
-            <a href="https://deepblue.camosun.bc.ca/~c0543503/Goen_Choi_Midterm/" target="_blank"><p>Click here to view
-              the webpage!</p></a>
-          </div>
-        </div>
-      </div>
-      <!--project 4-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
-        <div class="card">
-          <!--Card has front and back to have flip animation-->
-          <div class="card-front">
-            <img src="images/pokemon.jpg" class="card-img-top" alt="Image of Pikachu figure.">
-            <div class="card-body">
-              <h4>Pokemon Game Simulation with Object-Oriented Programming</h4>
-            </div>
-          </div>
-          <div class="card-back">
-            <h4>Pokemon Game Simulation with Object-Oriented Programming</h4>
-            <p>
-              I created this Pokemon game simulation using Java and Objected Oriented Programming.
-              This involved creating classes for Pokemons, Trainers, and Battle. The simulation allows to create trainer
-              objects
-              and create Pokemon objects and add it to the trainer's team. Also, it can simulate battles between
-              different Pokemons.
-            </p>
-            <!--link to project-->
-            <a href="https://github.com/cgoen/Pokemon.java" target="_blank"><p>Click here to view this project on
-              GitHub!</p></a>
-          </div>
-        </div>
-      </div>
-      <!--project5-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
-        <div class="card">
-          <!--Card has front and back to have flip animation-->
-          <div class="card-front">
-            <img src="images/work-schedule.png" class="card-img-top" alt="Image of work schedule.">
-            <div class="card-body">
-              <h4>Future Project - Work Schedule Webpage</h4>
-            </div>
-          </div>
-          <div class="card-back">
-            <h4>Future Project - Work Schedule Webpage</h4>
-            <p>
-              I would like to develop a webpage for my workplace. Currently, my work uses Excel spreadsheet that you can
-              only access while on work-site ,which makes it difficult
-              to view your schedule from home. This webpage will allow easier access to the schedule from anywhere and
-              allow staff to submit
-              shift change request to the manager.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!--project6-->
-      <div class="col-12 col-md-6 col-xl-4 card-container">
-        <div class="card">
-          <!--Card has front and back to have flip animation-->
-          <div class="card-front">
-            <img src="images/vacation-picks.jpg" class="card-img-top" alt="Image of person writing in calendar.">
-            <div class="card-body">
-              <h4>Future Project - Vacation Picks Calendar App</h4>
-            </div>
-          </div>
-          <div class="card-back">
-            <h4>Future Project - Vacation Picks Calendar App</h4>
-            <p>
-              Future project I have in mind is a vacation pick calendar app for my workplace.
-              This app would allow the manager to enter in staffs' seniority and allow the app to decide which staff
-              gets
-              their pick depending on their seniority. It'll also allow staff to see their's and other's vacation picks.
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
@@ -357,15 +238,15 @@
     <div class="row">
       <div class="col-12 col-md-6">
         <label for="name">Name</label>
-        <input type="text" class="form-control" placeholder="First name" id="name">
+        <input type="text" class="form-control" placeholder="First name" id="name" required>
       </div>
       <div class="col-12 col-md-6">
         <label for="email">E-mail</label>
-        <input type="email" class="form-control" placeholder="E-mail" id="email">
+        <input type="email" class="form-control" placeholder="E-mail" id="email" required>
       </div>
       <div class="col-12">
         <label for="message">Message</label>
-        <textarea class="form-control" placeholder="Send me a message!" id="message"></textarea>
+        <textarea class="form-control" placeholder="Send me a message!" id="message" required></textarea>
         <button type="submit" id="submit-button" class="click-buttons my-3">Send!</button>
       </div>
     </div>
