--- a/index.html
+++ b/index.html
@@ -209,23 +209,17 @@
         <div class="card">
           <!--Card has front and back to have flip animation-->
           <div class="card-front">
-            <img src="images/vnc_access.png" class="card-img-top" alt="Image of VNC server access project.">
+            <img src="images/tic-tac-toe.jpg" class="card-img-top" alt="Image of VNC server access project.">
             <div class="card-body">
-              <h4>VNC Server Access</h4>
+              <h4>Tic Tac Toe Game with Java!</h4>
             </div>
           </div>
           <div class="card-back">
-            <h4>VNC Server Access</h4>
+            <h4>Tic Tac Toe Game!</h4>
             <p>
-              This was another project of my operating systems course. I installed a Linux operating system on the
-              school
-              computer and set up a secure-shell access to this server.
-              Then I installed a VNC server software on this computer to allow remote access to this server with the
-              ability
-              to view the desktop display of the server.
+              This is a simple Tic Tac Toe game that I developed with Java.
             </p>
-            <a href="images/vnc-server-access-video.mp4" target="_blank"><p>Click here to see a clip of my project in
-              action!</p></a>
+            <a href="https://github.com/cgoen/TicTacToe/blob/main/src/Proj6_2_TicTacToe.java" target="_blank"><p>Click here to see my project!</p></a>
           </div>
         </div>
       </div>
@@ -285,8 +279,6 @@
       <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
     </svg>
   </a>
-  <!--email link-->
-  <a href="mailto:goyun6127@gmail.com?" class="mx-2">goyun6127@gmail.com</a>
 </footer>
 <!--script for masonry and bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
